--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/../style.css">
     </head>
     <body>
         <div id="root"></div>
-        <script src="index.js"></script>
+        <script src="/cx-react-pokemon/index.js"></script>
+        <h1>Hello World!</h1>
     </body>
 </html>
